--- a/Assignment02_Classification.ipynb
+++ b/Assignment02_Classification.ipynb
@@ -945,7 +945,7 @@
       "cell_type": "code",
       "source": [
         "#Outlier Dectection\n",
-        " # All columns are persional Information\n",
+        " # All columns are personal Information\n",
         " # No need to check Outlier"
       ],
       "metadata": {
